re-run arms data with revised darn version

--- a/use_cases/marine/ARMS/ERR3460466/final_outcome/darn_arms_MDSO_clustered_d_10_likelihood.krona_plot.html
+++ b/use_cases/marine/ARMS/ERR3460466/final_outcome/darn_arms_MDSO_clustered_d_10_likelihood.krona_plot.html
@@ -6626,162 +6626,101 @@ function zoomOut()
     <dataset>darn_likelihood_arms_MDSO_clustered_d_10_krona</dataset>
    </datasets>
 <node name="all">
- <magnitude><val>72.92574</val></magnitude>
+ <magnitude><val>74.9446</val></magnitude>
  <node name="DISTANT">
-  <magnitude><val>0.83904</val></magnitude>
+  <magnitude><val>1.8995</val></magnitude>
  </node>
  <node name="Bacteria">
-  <magnitudeUnassigned><val>0.1158</val></magnitudeUnassigned>
-  <magnitude><val>0.8076</val></magnitude>
+  <magnitude><val>8.9271</val></magnitude>
+  <magnitudeUnassigned><val>6.7791</val></magnitudeUnassigned>
   <node name="Proteobacteria">
-   <magnitude><val>0.6918</val></magnitude>
+   <magnitude><val>1.2038</val></magnitude>
    <node name="Alphaproteobacteria">
-    <magnitude><val>0.6918</val></magnitude>
+    <magnitudeUnassigned><val>0.2043</val></magnitudeUnassigned>
+    <magnitude><val>1.2038</val></magnitude>
+    <node name="Pelagibacterales">
+     <magnitude><val>0.4748</val></magnitude>
+     <node name="Pelagibacteraceae">
+      <magnitude><val>0.4748</val></magnitude>
+      <node name="Pelagibacteraceae">
+       <magnitude><val>0.4748</val></magnitude>
+      </node>
+     </node>
+    </node>
+    <node name="Rhodospirillales">
+     <magnitude><val>0.5247</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Terrabacteria_group">
+   <magnitude><val>0.9442</val></magnitude>
+   <node name="Firmicutes">
+    <magnitude><val>0.9442</val></magnitude>
+    <node name="Bacilli">
+     <magnitude><val>0.9442</val></magnitude>
+     <node name="Lactobacillales">
+      <magnitude><val>0.9442</val></magnitude>
+      <node name="Lactobacillaceae">
+       <magnitude><val>0.9442</val></magnitude>
+       <node name="Agrilactobacillus">
+        <magnitude><val>0.9442</val></magnitude>
+        <node name="Agrilactobacillus">
+         <magnitude><val>0.9442</val></magnitude>
+         <node name="composti">
+          <magnitude><val>0.9442</val></magnitude>
+          <node name="Agrilactobacillus">
+           <magnitude><val>0.9442</val></magnitude>
+           <node name="composti">
+            <magnitude><val>0.9442</val></magnitude>
+            <node name="DSM">
+             <magnitude><val>0.9442</val></magnitude>
+             <node name="18527">
+              <magnitude><val>0.9442</val></magnitude>
+              <node name="=">
+               <magnitude><val>0.9442</val></magnitude>
+               <node name="JCM">
+                <magnitude><val>0.9442</val></magnitude>
+                <node name="14202">
+                 <magnitude><val>0.9442</val></magnitude>
+                </node>
+               </node>
+              </node>
+             </node>
+            </node>
+           </node>
+          </node>
+         </node>
+        </node>
+       </node>
+      </node>
+     </node>
+    </node>
    </node>
   </node>
  </node>
  <node name="Eukaryota">
-  <magnitudeUnassigned><val>21.407</val></magnitudeUnassigned>
-  <magnitude><val>71.2791</val></magnitude>
-  <node name="Platyhelminthes">
-   <magnitude><val>0.9904</val></magnitude>
-   <node name="Rhabditophora">
-    <magnitude><val>0.545</val></magnitude>
-   </node>
-   <node name="Monogenea">
-    <magnitude><val>0.4454</val></magnitude>
-   </node>
-  </node>
-  <node name="Nematoda">
-   <magnitude><val>0.7737</val></magnitude>
-   <node name="Enoplea">
-    <magnitude><val>0.7737</val></magnitude>
-    <node name="Dorylaimida">
-     <magnitude><val>0.7737</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Chordata">
-   <magnitudeUnassigned><val>0.8885</val></magnitudeUnassigned>
-   <magnitude><val>3.3676</val></magnitude>
-   <node name="Ascidiacea">
-    <magnitude><val>2.4791</val></magnitude>
-    <node name="Stolidobranchia">
-     <magnitude><val>2.4791</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Collodictyonidae">
-   <magnitude><val>0.8729</val></magnitude>
-   <node name="Collodictyonidae">
-    <magnitude><val>0.8729</val></magnitude>
-    <node name="Collodictyonidae">
-     <magnitude><val>0.8729</val></magnitude>
-     <node name="Collodictyonidae">
-      <magnitude><val>0.8729</val></magnitude>
-      <node name="Diphylleia">
-       <magnitude><val>0.8729</val></magnitude>
-       <node name="Diphylleia_rotans">
-        <magnitude><val>0.8729</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Mollusca">
-   <magnitude><val>5.5448</val></magnitude>
-   <magnitudeUnassigned><val>1.0722</val></magnitudeUnassigned>
-   <node name="Gastropoda">
-    <magnitudeUnassigned><val>0.8443</val></magnitudeUnassigned>
-    <magnitude><val>2.7619</val></magnitude>
-    <node name="Paludomidae">
-     <magnitude><val>0.5111</val></magnitude>
-     <node name="Paludomidae">
-      <magnitude><val>0.5111</val></magnitude>
-     </node>
-    </node>
-    <node name="Neogastropoda">
-     <magnitude><val>1.4065</val></magnitude>
-    </node>
-   </node>
-   <node name="Bivalvia">
-    <magnitude><val>1.7107</val></magnitude>
-    <node name="Ostreoida">
-     <magnitude><val>1.7107</val></magnitude>
-    </node>
-   </node>
-  </node>
+  <magnitudeUnassigned><val>20.7994</val></magnitudeUnassigned>
+  <magnitude><val>64.118</val></magnitude>
   <node name="Porifera">
-   <magnitude><val>4.6553</val></magnitude>
-   <node name="Calcarea">
-    <magnitude><val>0.5109</val></magnitude>
-    <node name="Clathrinida">
-     <magnitude><val>0.5109</val></magnitude>
-     <node name="Clathrinidae">
-      <magnitude><val>0.5109</val></magnitude>
-      <node name="Clathrina">
-       <magnitude><val>0.5109</val></magnitude>
-       <node name="Clathrina_clathrus">
-        <magnitude><val>0.5109</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
+   <magnitude><val>4.2237</val></magnitude>
    <node name="Demospongiae">
-    <magnitude><val>4.1444</val></magnitude>
-    <magnitudeUnassigned><val>1.4569</val></magnitudeUnassigned>
+    <magnitudeUnassigned><val>1.4635</val></magnitudeUnassigned>
+    <magnitude><val>4.2237</val></magnitude>
     <node name="Suberitida">
-     <magnitude><val>1.8808</val></magnitude>
+     <magnitude><val>1.8941</val></magnitude>
     </node>
     <node name="Dendroceratida">
-     <magnitude><val>0.8067</val></magnitude>
+     <magnitude><val>0.8661</val></magnitude>
     </node>
    </node>
   </node>
-  <node name="Bryozoa">
-   <magnitude><val>1.2613</val></magnitude>
-   <node name="Gymnolaemata">
-    <magnitude><val>1.2613</val></magnitude>
-    <node name="Cheilostomatida">
-     <magnitude><val>1.2613</val></magnitude>
-    </node>
+  <node name="Bacillariophyta">
+   <magnitude><val>1.3598</val></magnitude>
+   <node name="Mediophyceae">
+    <magnitude><val>0.811</val></magnitude>
    </node>
-  </node>
-  <node name="Cnidaria">
-   <magnitude><val>15.8192</val></magnitude>
-   <node name="Myxozoa">
-    <magnitudeUnassigned><val>6.4198</val></magnitudeUnassigned>
-    <magnitude><val>6.7697</val></magnitude>
-    <node name="Multivalvulida">
-     <magnitude><val>0.3499</val></magnitude>
-     <node name="Kudoidae">
-      <magnitude><val>0.3499</val></magnitude>
-      <node name="Kudoa">
-       <magnitude><val>0.3499</val></magnitude>
-      </node>
-     </node>
-    </node>
-   </node>
-   <node name="Hydrozoa">
-    <magnitude><val>8.0495</val></magnitude>
-   </node>
-   <node name="Anthozoa">
-    <magnitude><val>1</val></magnitude>
-    <node name="Actiniaria">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Annelida">
-   <magnitude><val>2.4302</val></magnitude>
-   <node name="Polychaeta">
-    <magnitudeUnassigned><val>1.8264</val></magnitudeUnassigned>
-    <magnitude><val>2.4302</val></magnitude>
-    <node name="Eunicida">
-     <magnitude><val>0.6038</val></magnitude>
-    </node>
+   <node name="Bacillariophyceae">
+    <magnitude><val>0.5488</val></magnitude>
    </node>
   </node>
   <node name="Chytridiomycota">
@@ -6799,81 +6738,153 @@ function zoomOut()
     </node>
    </node>
   </node>
-  <node name="Entoprocta">
-   <magnitudeUnassigned><val>0.7674</val></magnitudeUnassigned>
-   <magnitude><val>1.4327</val></magnitude>
-   <node name="Loxosomatidae">
-    <magnitude><val>0.6653</val></magnitude>
-    <node name="Loxosomatidae">
-     <magnitude><val>0.6653</val></magnitude>
-     <node name="Loxosomatidae">
-      <magnitude><val>0.6653</val></magnitude>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Bacillariophyta">
-   <magnitude><val>1.1149</val></magnitude>
-  </node>
-  <node name="Haptista">
-   <magnitude><val>0.767</val></magnitude>
-   <node name="Haptophyta">
-    <magnitude><val>0.767</val></magnitude>
+  <node name="Euglenozoa">
+   <magnitude><val>2.315</val></magnitude>
+   <node name="Euglenida">
+    <magnitude><val>2.315</val></magnitude>
    </node>
   </node>
   <node name="Rhodophyta">
-   <magnitude><val>2.6631</val></magnitude>
+   <magnitude><val>0.4731</val></magnitude>
   </node>
-  <node name="Arthropoda">
-   <magnitude><val>5.2712</val></magnitude>
-   <magnitudeUnassigned><val>0.4895</val></magnitudeUnassigned>
-   <node name="Hexanauplia">
-    <magnitudeUnassigned><val>3.5511</val></magnitudeUnassigned>
-    <magnitude><val>4.2645</val></magnitude>
-    <node name="Sessilia">
-     <magnitude><val>0.7134</val></magnitude>
+  <node name="Entoprocta">
+   <magnitudeUnassigned><val>0.7521</val></magnitudeUnassigned>
+   <magnitude><val>1.3597</val></magnitude>
+   <node name="Loxosomatidae">
+    <magnitude><val>0.6076</val></magnitude>
+    <node name="Loxosomatidae">
+     <magnitude><val>0.6076</val></magnitude>
+     <node name="Loxosomatidae">
+      <magnitude><val>0.6076</val></magnitude>
+     </node>
     </node>
    </node>
-   <node name="Insecta">
-    <magnitude><val>0.5172</val></magnitude>
+  </node>
+  <node name="Haptista">
+   <magnitude><val>0.775</val></magnitude>
+   <node name="Haptophyta">
+    <magnitude><val>0.775</val></magnitude>
+   </node>
+  </node>
+  <node name="Bigyra">
+   <magnitude><val>2.0513</val></magnitude>
+   <node name="Bigyra">
+    <magnitude><val>2.0513</val></magnitude>
+    <node name="Bicosoecida">
+     <magnitude><val>2.0513</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Annelida">
+   <magnitude><val>2.3706</val></magnitude>
+   <node name="Polychaeta">
+    <magnitude><val>2.3706</val></magnitude>
+    <magnitudeUnassigned><val>0.8491</val></magnitudeUnassigned>
+    <node name="Eunicida">
+     <magnitude><val>0.5992</val></magnitude>
+    </node>
+    <node name="Spionida">
+     <magnitude><val>0.9223</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Arthropoda">
+   <magnitudeUnassigned><val>1.5266</val></magnitudeUnassigned>
+   <magnitude><val>5.6542</val></magnitude>
+   <node name="Malacostraca">
+    <magnitude><val>0.5741</val></magnitude>
+   </node>
+   <node name="Hexanauplia">
+    <magnitude><val>3.5535</val></magnitude>
+    <magnitudeUnassigned><val>2.9021</val></magnitudeUnassigned>
+    <node name="Sessilia">
+     <magnitude><val>0.6514</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Nematoda">
+   <magnitude><val>0.6922</val></magnitude>
+  </node>
+  <node name="Bryozoa">
+   <magnitude><val>1.4155</val></magnitude>
+   <node name="Gymnolaemata">
+    <magnitude><val>1.4155</val></magnitude>
+    <node name="Cheilostomatida">
+     <magnitude><val>1.4155</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Cnidaria">
+   <magnitude><val>8.7397</val></magnitude>
+   <node name="Anthozoa">
+    <magnitude><val>1</val></magnitude>
+   </node>
+   <node name="Hydrozoa">
+    <magnitude><val>7.7397</val></magnitude>
+   </node>
+  </node>
+  <node name="Mollusca">
+   <magnitudeUnassigned><val>0.7632</val></magnitudeUnassigned>
+   <magnitude><val>5.0968</val></magnitude>
+   <node name="Gastropoda">
+    <magnitude><val>2.5834</val></magnitude>
+    <magnitudeUnassigned><val>1.1504</val></magnitudeUnassigned>
+    <node name="Neogastropoda">
+     <magnitude><val>0.744</val></magnitude>
+    </node>
+    <node name="Paludomidae">
+     <magnitude><val>0.689</val></magnitude>
+     <node name="Paludomidae">
+      <magnitude><val>0.689</val></magnitude>
+     </node>
+    </node>
+   </node>
+   <node name="Bivalvia">
+    <magnitude><val>1.7502</val></magnitude>
+    <node name="Ostreoida">
+     <magnitude><val>1.7502</val></magnitude>
+    </node>
    </node>
   </node>
   <node name="Discosea">
-   <magnitude><val>1.9465</val></magnitude>
-   <node name="Longamoebia">
-    <magnitude><val>0.648</val></magnitude>
-    <node name="Longamoebia">
-     <magnitude><val>0.648</val></magnitude>
-    </node>
-   </node>
+   <magnitude><val>0.5402</val></magnitude>
    <node name="Flabellinia">
-    <magnitude><val>1.2985</val></magnitude>
+    <magnitude><val>0.5402</val></magnitude>
     <node name="Dactylopodida">
-     <magnitude><val>0.6575</val></magnitude>
-    </node>
-    <node name="Vannellidae">
-     <magnitude><val>0.641</val></magnitude>
-     <node name="Vannellidae">
-      <magnitude><val>0.641</val></magnitude>
-     </node>
+     <magnitude><val>0.5402</val></magnitude>
     </node>
    </node>
   </node>
-  <node name="Basidiomycota">
-   <magnitude><val>0.4613</val></magnitude>
-   <node name="Agaricomycetes">
-    <magnitude><val>0.4613</val></magnitude>
-    <node name="Geastrales">
-     <magnitude><val>0.4613</val></magnitude>
-     <node name="Sphaerobolaceae">
-      <magnitude><val>0.4613</val></magnitude>
-      <node name="Sphaerobolus">
-       <magnitude><val>0.4613</val></magnitude>
-       <node name="Sphaerobolus_stellatus">
-        <magnitude><val>0.4613</val></magnitude>
-       </node>
-      </node>
+  <node name="Platyhelminthes">
+   <magnitude><val>0.763</val></magnitude>
+   <node name="Rhabditophora">
+    <magnitude><val>0.763</val></magnitude>
+   </node>
+  </node>
+  <node name="Chordata">
+   <magnitude><val>4.9888</val></magnitude>
+   <node name="Actinopteri">
+    <magnitude><val>0.9501</val></magnitude>
+    <node name="Polycentridae">
+     <magnitude><val>0.9501</val></magnitude>
+     <node name="Polycentridae">
+      <magnitude><val>0.9501</val></magnitude>
      </node>
+    </node>
+   </node>
+   <node name="Appendicularia">
+    <magnitude><val>1.4084</val></magnitude>
+    <node name="Copelata">
+     <magnitude><val>1.4084</val></magnitude>
+     <node name="Oikopleuridae">
+      <magnitude><val>1.4084</val></magnitude>
+     </node>
+    </node>
+   </node>
+   <node name="Ascidiacea">
+    <magnitude><val>2.6303</val></magnitude>
+    <node name="Stolidobranchia">
+     <magnitude><val>2.6303</val></magnitude>
     </node>
    </node>
   </node>
