--- a/use_cases/marine/ARMS/ERR3460466/final_outcome/darn_arms_MDSO_clustered_d_10_pres_abs.krona_plot.html
+++ b/use_cases/marine/ARMS/ERR3460466/final_outcome/darn_arms_MDSO_clustered_d_10_pres_abs.krona_plot.html
@@ -6626,124 +6626,19 @@ function zoomOut()
     <dataset>darn_counts_arms_MDSO_clustered_d_10_krona</dataset>
    </datasets>
 <node name="all">
- <magnitude><val>109</val></magnitude>
- <node name="Bacteria">
-  <magnitude><val>2</val></magnitude>
-  <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
-  <node name="Proteobacteria">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>1</val></magnitude>
-   <node name="Alphaproteobacteria">
-    <magnitude><val>1</val></magnitude>
-   </node>
-  </node>
- </node>
+ <magnitude><val>106</val></magnitude>
  <node name="DISTANT">
-  <magnitude><val>4</val></magnitude>
+  <magnitude><val>2</val></magnitude>
  </node>
  <node name="Eukaryota">
-  <magnitude><val>103</val></magnitude>
-  <magnitudeUnassigned><val>29</val></magnitudeUnassigned>
-  <node name="Mollusca">
-   <magnitudeUnassigned><val>2</val></magnitudeUnassigned>
-   <magnitude><val>8</val></magnitude>
-   <node name="Bivalvia">
-    <magnitude><val>2</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Ostreoida">
-     <magnitude><val>2</val></magnitude>
-    </node>
-   </node>
-   <node name="Gastropoda">
-    <magnitude><val>4</val></magnitude>
-    <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
-    <node name="Paludomidae">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>1</val></magnitude>
-     <node name="Paludomidae">
-      <magnitude><val>1</val></magnitude>
-     </node>
-    </node>
-    <node name="Neogastropoda">
-     <magnitude><val>2</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Rhodophyta">
-   <magnitude><val>3</val></magnitude>
-  </node>
-  <node name="Basidiomycota">
-   <magnitude><val>1</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Agaricomycetes">
-    <magnitude><val>1</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Geastrales">
-     <magnitude><val>1</val></magnitude>
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Sphaerobolaceae">
-      <magnitude><val>1</val></magnitude>
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Sphaerobolus">
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <magnitude><val>1</val></magnitude>
-       <node name="Sphaerobolus_stellatus">
-        <magnitude><val>1</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Haptista">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>1</val></magnitude>
-   <node name="Haptophyta">
-    <magnitude><val>1</val></magnitude>
-   </node>
-  </node>
-  <node name="Discosea">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>3</val></magnitude>
-   <node name="Flabellinia">
-    <magnitude><val>2</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Dactylopodida">
-     <magnitude><val>1</val></magnitude>
-    </node>
-    <node name="Vannellidae">
-     <magnitude><val>1</val></magnitude>
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Vannellidae">
-      <magnitude><val>1</val></magnitude>
-     </node>
-    </node>
-   </node>
-   <node name="Longamoebia">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>1</val></magnitude>
-    <node name="Longamoebia">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Nematoda">
-   <magnitude><val>1</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Enoplea">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>1</val></magnitude>
-    <node name="Dorylaimida">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-  </node>
+  <magnitude><val>93</val></magnitude>
+  <magnitudeUnassigned><val>30</val></magnitudeUnassigned>
   <node name="Porifera">
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>6</val></magnitude>
+   <magnitude><val>5</val></magnitude>
    <node name="Demospongiae">
-    <magnitudeUnassigned><val>2</val></magnitudeUnassigned>
     <magnitude><val>5</val></magnitude>
+    <magnitudeUnassigned><val>2</val></magnitudeUnassigned>
     <node name="Dendroceratida">
      <magnitude><val>1</val></magnitude>
     </node>
@@ -6751,49 +6646,116 @@ function zoomOut()
      <magnitude><val>2</val></magnitude>
     </node>
    </node>
-   <node name="Calcarea">
+  </node>
+  <node name="Bryozoa">
+   <magnitude><val>2</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Gymnolaemata">
+    <magnitude><val>2</val></magnitude>
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>1</val></magnitude>
-    <node name="Clathrinida">
-     <magnitude><val>1</val></magnitude>
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Clathrinidae">
-      <magnitude><val>1</val></magnitude>
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Clathrina">
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <magnitude><val>1</val></magnitude>
-       <node name="Clathrina_clathrus">
-        <magnitude><val>1</val></magnitude>
-       </node>
-      </node>
-     </node>
+    <node name="Cheilostomatida">
+     <magnitude><val>2</val></magnitude>
     </node>
    </node>
   </node>
-  <node name="Arthropoda">
+  <node name="Nematoda">
+   <magnitude><val>1</val></magnitude>
+  </node>
+  <node name="Haptista">
+   <magnitude><val>1</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Haptophyta">
+    <magnitude><val>1</val></magnitude>
+   </node>
+  </node>
+  <node name="Chordata">
    <magnitude><val>8</val></magnitude>
-   <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Actinopteri">
+    <magnitude><val>1</val></magnitude>
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <node name="Polycentridae">
+     <magnitude><val>1</val></magnitude>
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <node name="Polycentridae">
+      <magnitude><val>1</val></magnitude>
+     </node>
+    </node>
+   </node>
+   <node name="Appendicularia">
+    <magnitude><val>3</val></magnitude>
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <node name="Copelata">
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <magnitude><val>3</val></magnitude>
+     <node name="Oikopleuridae">
+      <magnitude><val>3</val></magnitude>
+     </node>
+    </node>
+   </node>
+   <node name="Ascidiacea">
+    <magnitude><val>4</val></magnitude>
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <node name="Stolidobranchia">
+     <magnitude><val>4</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Bacillariophyta">
+   <magnitude><val>2</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Mediophyceae">
+    <magnitude><val>1</val></magnitude>
+   </node>
+   <node name="Bacillariophyceae">
+    <magnitude><val>1</val></magnitude>
+   </node>
+  </node>
+  <node name="Arthropoda">
+   <magnitudeUnassigned><val>2</val></magnitudeUnassigned>
+   <magnitude><val>8</val></magnitude>
+   <node name="Malacostraca">
+    <magnitude><val>1</val></magnitude>
+   </node>
    <node name="Hexanauplia">
-    <magnitude><val>6</val></magnitude>
-    <magnitudeUnassigned><val>5</val></magnitudeUnassigned>
+    <magnitude><val>5</val></magnitude>
+    <magnitudeUnassigned><val>4</val></magnitudeUnassigned>
     <node name="Sessilia">
      <magnitude><val>1</val></magnitude>
     </node>
    </node>
-   <node name="Insecta">
+  </node>
+  <node name="Platyhelminthes">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>1</val></magnitude>
+   <node name="Rhabditophora">
     <magnitude><val>1</val></magnitude>
+   </node>
+  </node>
+  <node name="Entoprocta">
+   <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
+   <magnitude><val>2</val></magnitude>
+   <node name="Loxosomatidae">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>1</val></magnitude>
+    <node name="Loxosomatidae">
+     <magnitude><val>1</val></magnitude>
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <node name="Loxosomatidae">
+      <magnitude><val>1</val></magnitude>
+     </node>
+    </node>
    </node>
   </node>
   <node name="Chytridiomycota">
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
    <magnitude><val>1</val></magnitude>
    <node name="Chytridiomycetes">
-    <magnitude><val>1</val></magnitude>
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>1</val></magnitude>
     <node name="Synchytriales">
-     <magnitude><val>1</val></magnitude>
      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <magnitude><val>1</val></magnitude>
      <node name="Synchytriaceae">
       <magnitude><val>1</val></magnitude>
       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
@@ -6804,116 +6766,169 @@ function zoomOut()
     </node>
    </node>
   </node>
-  <node name="Bryozoa">
-   <magnitude><val>2</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Gymnolaemata">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>2</val></magnitude>
-    <node name="Cheilostomatida">
-     <magnitude><val>2</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Bacillariophyta">
-   <magnitude><val>2</val></magnitude>
-  </node>
-  <node name="Platyhelminthes">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>2</val></magnitude>
-   <node name="Monogenea">
-    <magnitude><val>1</val></magnitude>
-   </node>
-   <node name="Rhabditophora">
-    <magnitude><val>1</val></magnitude>
-   </node>
-  </node>
-  <node name="Collodictyonidae">
+  <node name="Discosea">
    <magnitude><val>1</val></magnitude>
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Collodictyonidae">
+   <node name="Flabellinia">
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
     <magnitude><val>1</val></magnitude>
-    <node name="Collodictyonidae">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <node name="Dactylopodida">
      <magnitude><val>1</val></magnitude>
-     <node name="Collodictyonidae">
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <magnitude><val>1</val></magnitude>
-      <node name="Diphylleia">
-       <magnitude><val>1</val></magnitude>
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <node name="Diphylleia_rotans">
-        <magnitude><val>1</val></magnitude>
-       </node>
-      </node>
-     </node>
     </node>
    </node>
   </node>
-  <node name="Cnidaria">
-   <magnitude><val>24</val></magnitude>
+  <node name="Euglenozoa">
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>3</val></magnitude>
+   <node name="Euglenida">
+    <magnitude><val>3</val></magnitude>
+   </node>
+  </node>
+  <node name="Bigyra">
+   <magnitude><val>4</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Bigyra">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>4</val></magnitude>
+    <node name="Bicosoecida">
+     <magnitude><val>4</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Rhodophyta">
+   <magnitude><val>1</val></magnitude>
+  </node>
+  <node name="Cnidaria">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>12</val></magnitude>
+   <node name="Hydrozoa">
+    <magnitude><val>10</val></magnitude>
+   </node>
    <node name="Anthozoa">
     <magnitude><val>2</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Actiniaria">
-     <magnitude><val>2</val></magnitude>
-    </node>
-   </node>
-   <node name="Myxozoa">
-    <magnitude><val>11</val></magnitude>
-    <magnitudeUnassigned><val>10</val></magnitudeUnassigned>
-    <node name="Multivalvulida">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>1</val></magnitude>
-     <node name="Kudoidae">
-      <magnitude><val>1</val></magnitude>
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Kudoa">
-       <magnitude><val>1</val></magnitude>
-      </node>
-     </node>
-    </node>
-   </node>
-   <node name="Hydrozoa">
-    <magnitude><val>11</val></magnitude>
    </node>
   </node>
   <node name="Annelida">
    <magnitude><val>4</val></magnitude>
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
    <node name="Polychaeta">
-    <magnitudeUnassigned><val>3</val></magnitudeUnassigned>
     <magnitude><val>4</val></magnitude>
+    <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
+    <node name="Spionida">
+     <magnitude><val>2</val></magnitude>
+    </node>
     <node name="Eunicida">
      <magnitude><val>1</val></magnitude>
     </node>
    </node>
   </node>
-  <node name="Chordata">
+  <node name="Mollusca">
+   <magnitude><val>7</val></magnitude>
    <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
-   <magnitude><val>5</val></magnitude>
-   <node name="Ascidiacea">
-    <magnitude><val>4</val></magnitude>
+   <node name="Bivalvia">
+    <magnitude><val>2</val></magnitude>
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Stolidobranchia">
-     <magnitude><val>4</val></magnitude>
+    <node name="Ostreoida">
+     <magnitude><val>2</val></magnitude>
+    </node>
+   </node>
+   <node name="Gastropoda">
+    <magnitude><val>4</val></magnitude>
+    <magnitudeUnassigned><val>2</val></magnitudeUnassigned>
+    <node name="Paludomidae">
+     <magnitude><val>1</val></magnitude>
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <node name="Paludomidae">
+      <magnitude><val>1</val></magnitude>
+     </node>
+    </node>
+    <node name="Neogastropoda">
+     <magnitude><val>1</val></magnitude>
     </node>
    </node>
   </node>
-  <node name="Entoprocta">
-   <magnitude><val>2</val></magnitude>
-   <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
-   <node name="Loxosomatidae">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+ </node>
+ <node name="Bacteria">
+  <magnitude><val>11</val></magnitude>
+  <magnitudeUnassigned><val>7</val></magnitudeUnassigned>
+  <node name="Terrabacteria_group">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>1</val></magnitude>
+   <node name="Firmicutes">
     <magnitude><val>1</val></magnitude>
-    <node name="Loxosomatidae">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <node name="Bacilli">
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <magnitude><val>1</val></magnitude>
+     <node name="Lactobacillales">
+      <magnitude><val>1</val></magnitude>
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <node name="Lactobacillaceae">
+       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+       <magnitude><val>1</val></magnitude>
+       <node name="Agrilactobacillus">
+        <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+        <magnitude><val>1</val></magnitude>
+        <node name="Agrilactobacillus">
+         <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+         <magnitude><val>1</val></magnitude>
+         <node name="composti">
+          <magnitude><val>1</val></magnitude>
+          <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+          <node name="Agrilactobacillus">
+           <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+           <magnitude><val>1</val></magnitude>
+           <node name="composti">
+            <magnitude><val>1</val></magnitude>
+            <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+            <node name="DSM">
+             <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+             <magnitude><val>1</val></magnitude>
+             <node name="18527">
+              <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+              <magnitude><val>1</val></magnitude>
+              <node name="=">
+               <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+               <magnitude><val>1</val></magnitude>
+               <node name="JCM">
+                <magnitude><val>1</val></magnitude>
+                <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+                <node name="14202">
+                 <magnitude><val>1</val></magnitude>
+                </node>
+               </node>
+              </node>
+             </node>
+            </node>
+           </node>
+          </node>
+         </node>
+        </node>
+       </node>
+      </node>
+     </node>
+    </node>
+   </node>
+  </node>
+  <node name="Proteobacteria">
+   <magnitude><val>3</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Alphaproteobacteria">
+    <magnitude><val>3</val></magnitude>
+    <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
+    <node name="Pelagibacterales">
      <magnitude><val>1</val></magnitude>
      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Loxosomatidae">
+     <node name="Pelagibacteraceae">
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
       <magnitude><val>1</val></magnitude>
+      <node name="Pelagibacteraceae">
+       <magnitude><val>1</val></magnitude>
+      </node>
      </node>
+    </node>
+    <node name="Rhodospirillales">
+     <magnitude><val>1</val></magnitude>
     </node>
    </node>
   </node>
