--- a/use_cases/marine/ARMS/ERR3460470/final_outcome/darn_sediment_clustered_d_10_likelihood.krona_plot.html
+++ b/use_cases/marine/ARMS/ERR3460470/final_outcome/darn_sediment_clustered_d_10_likelihood.krona_plot.html
@@ -6626,307 +6626,205 @@ function zoomOut()
     <dataset>darn_likelihood_sediment_clustered_d_10_krona</dataset>
    </datasets>
 <node name="all">
- <magnitude><val>130.628467849</val></magnitude>
- <node name="Archaea">
-  <magnitude><val>1.7148</val></magnitude>
-  <node name="Euryarchaeota">
-   <magnitude><val>1.7148</val></magnitude>
-   <node name="environmental_samples">
-    <magnitude><val>1.7148</val></magnitude>
-    <node name="uncultured_marine_group_II/III">
-     <magnitude><val>1.7148</val></magnitude>
-    </node>
-   </node>
-  </node>
- </node>
- <node name="Bacteria">
-  <magnitudeUnassigned><val>4.0676</val></magnitudeUnassigned>
-  <magnitude><val>35.136</val></magnitude>
-  <node name="Bacteroidetes">
-   <magnitude><val>13.0599</val></magnitude>
-   <magnitudeUnassigned><val>3.9933</val></magnitudeUnassigned>
-   <node name="Flavobacteriia">
-    <magnitude><val>9.0666</val></magnitude>
-    <magnitudeUnassigned><val>7.5097</val></magnitudeUnassigned>
-    <node name="Flavobacteriales">
-     <magnitude><val>1.5569</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Proteobacteria">
-   <magnitude><val>18.0085</val></magnitude>
-   <node name="Alphaproteobacteria">
-    <magnitudeUnassigned><val>10.6964</val></magnitudeUnassigned>
-    <magnitude><val>11.9021</val></magnitude>
-    <node name="Alphaproteobacteria_incertae_sedis">
-     <magnitude><val>0.532</val></magnitude>
-    </node>
-    <node name="Rickettsiales">
-     <magnitude><val>0.5068</val></magnitude>
-    </node>
-    <node name="Sphingomonadales">
-     <magnitude><val>0.1669</val></magnitude>
-    </node>
-   </node>
-   <node name="Gammaproteobacteria">
-    <magnitude><val>5.5446</val></magnitude>
-   </node>
-   <node name="Betaproteobacteria">
-    <magnitude><val>0.5618</val></magnitude>
-    <node name="Nitrosomonadales">
-     <magnitude><val>0.5618</val></magnitude>
-    </node>
-   </node>
-  </node>
+ <magnitude><val>70.91112</val></magnitude>
+ <node name="DISTANT">
+  <magnitude><val>0.03302</val></magnitude>
  </node>
  <node name="Eukaryota">
-  <magnitudeUnassigned><val>46.265</val></magnitudeUnassigned>
-  <magnitude><val>93.777667849</val></magnitude>
-  <node name="Gastrotricha">
-   <magnitude><val>3.4222</val></magnitude>
-   <node name="Chaetonotida">
-    <magnitude><val>3.4222</val></magnitude>
-    <node name="Chaetonotida">
-     <magnitude><val>3.4222</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Oomycota">
-   <magnitude><val>1.4157</val></magnitude>
-   <node name="Oomycota">
-    <magnitude><val>1.4157</val></magnitude>
-   </node>
-  </node>
-  <node name="Cnidaria">
-   <magnitude><val>4.452807849</val></magnitude>
-   <node name="Myxozoa">
-    <magnitude><val>3.043107849</val></magnitude>
-    <magnitudeUnassigned><val>1.207107849</val></magnitudeUnassigned>
-    <node name="Multivalvulida">
-     <magnitude><val>0.336</val></magnitude>
-     <node name="Kudoidae">
-      <magnitude><val>0.336</val></magnitude>
-      <node name="Kudoa">
-       <magnitude><val>0.336</val></magnitude>
-      </node>
-     </node>
-    </node>
-    <node name="Malacovalvulida">
-     <magnitude><val>1.5</val></magnitude>
-     <node name="Saccosporidae">
-      <magnitude><val>1.5</val></magnitude>
-     </node>
-    </node>
-   </node>
-   <node name="Hydrozoa">
-    <magnitude><val>1.4097</val></magnitude>
-   </node>
-  </node>
-  <node name="Arthropoda">
-   <magnitudeUnassigned><val>1.501</val></magnitudeUnassigned>
-   <magnitude><val>2.2014</val></magnitude>
-   <node name="Hexanauplia">
-    <magnitude><val>0.7004</val></magnitude>
-    <node name="Calanoida">
-     <magnitude><val>0.7004</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Filasterea">
-   <magnitude><val>4.0027</val></magnitude>
-   <node name="Filasterea">
-    <magnitude><val>4.0027</val></magnitude>
-   </node>
-  </node>
-  <node name="Chordata">
-   <magnitude><val>0.93066</val></magnitude>
-   <node name="Thaliacea">
-    <magnitude><val>0.43106</val></magnitude>
-    <node name="Pyrosomata">
-     <magnitude><val>0.43106</val></magnitude>
-     <node name="Pyrosomatidae">
-      <magnitude><val>0.43106</val></magnitude>
-      <node name="Pyrostremma">
-       <magnitude><val>0.43106</val></magnitude>
-       <node name="Pyrostremma_spinosum">
-        <magnitude><val>0.43106</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-   <node name="Appendicularia">
-    <magnitude><val>0.4996</val></magnitude>
-    <node name="Copelata">
-     <magnitude><val>0.4996</val></magnitude>
-     <node name="Oikopleuridae">
-      <magnitude><val>0.4996</val></magnitude>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Nematoda">
-   <magnitude><val>1.8883</val></magnitude>
-   <node name="Chromadorea">
-    <magnitude><val>0.8962</val></magnitude>
-   </node>
-   <node name="Enoplea">
-    <magnitude><val>0.9921</val></magnitude>
-    <node name="Dorylaimida">
-     <magnitude><val>0.9921</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Annelida">
-   <magnitude><val>1.0659</val></magnitude>
-   <node name="Polychaeta">
-    <magnitude><val>1.0659</val></magnitude>
-    <magnitudeUnassigned><val>0.6462</val></magnitudeUnassigned>
-    <node name="Potamodrilidae">
-     <magnitude><val>0.4197</val></magnitude>
-     <node name="Potamodrilus">
-      <magnitude><val>0.4197</val></magnitude>
-      <node name="Potamodrilus">
-       <magnitude><val>0.4197</val></magnitude>
-       <node name="Potamodrilus_fluviatilis">
-        <magnitude><val>0.4197</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
+  <magnitude><val>53.501</val></magnitude>
+  <magnitudeUnassigned><val>21.7126</val></magnitudeUnassigned>
+  <node name="Xanthophyceae">
+   <magnitude><val>3.3062</val></magnitude>
+   <node name="Xanthophyceae">
+    <magnitude><val>3.3062</val></magnitude>
    </node>
   </node>
   <node name="Haptista">
-   <magnitude><val>0.9469</val></magnitude>
+   <magnitude><val>2.5469</val></magnitude>
    <node name="Haptophyta">
-    <magnitude><val>0.9469</val></magnitude>
-   </node>
-  </node>
-  <node name="Xanthophyceae">
-   <magnitude><val>1.9007</val></magnitude>
-   <node name="Xanthophyceae">
-    <magnitude><val>1.9007</val></magnitude>
-    <magnitudeUnassigned><val>1.4373</val></magnitudeUnassigned>
-    <node name="Vaucheriales">
-     <magnitude><val>0.4634</val></magnitude>
-     <node name="Vaucheriaceae">
-      <magnitude><val>0.4634</val></magnitude>
-      <node name="Vaucheria">
-       <magnitude><val>0.4634</val></magnitude>
-       <node name="Vaucheria_sessilis">
-        <magnitude><val>0.4634</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Phaeophyceae">
-   <magnitude><val>0.6205</val></magnitude>
-   <node name="Phaeophyceae">
-    <magnitude><val>0.6205</val></magnitude>
-   </node>
-  </node>
-  <node name="Bacillariophyta">
-   <magnitude><val>9.0137</val></magnitude>
-   <magnitudeUnassigned><val>4.1929</val></magnitudeUnassigned>
-   <node name="Mediophyceae">
-    <magnitude><val>0.7398</val></magnitude>
-   </node>
-   <node name="Bacillariophyceae">
-    <magnitudeUnassigned><val>0.7641</val></magnitudeUnassigned>
-    <magnitude><val>2.516</val></magnitude>
-    <node name="Bacillariales">
-     <magnitude><val>1.135</val></magnitude>
-     <node name="Bacillariaceae">
-      <magnitude><val>1.135</val></magnitude>
-     </node>
-    </node>
-    <node name="Naviculales">
-     <magnitude><val>0.6169</val></magnitude>
-    </node>
-   </node>
-   <node name="Coscinodiscophyceae">
-    <magnitude><val>1.565</val></magnitude>
-    <node name="Thalassiosirales">
-     <magnitude><val>1.565</val></magnitude>
-    </node>
+    <magnitude><val>2.5469</val></magnitude>
    </node>
   </node>
   <node name="Mollusca">
-   <magnitude><val>0.4723</val></magnitude>
+   <magnitude><val>2.6836</val></magnitude>
    <node name="Bivalvia">
-    <magnitude><val>0.4723</val></magnitude>
+    <magnitude><val>2.6836</val></magnitude>
+    <node name="Pterioida">
+     <magnitude><val>2.6836</val></magnitude>
+    </node>
    </node>
   </node>
-  <node name="Ascomycota">
-   <magnitudeUnassigned><val>3.5063</val></magnitudeUnassigned>
-   <magnitude><val>6.2343</val></magnitude>
-   <node name="Dothideomycetes">
-    <magnitude><val>0.786</val></magnitude>
-    <node name="Dothideales">
-     <magnitude><val>0.786</val></magnitude>
-     <node name="Dothioraceae">
-      <magnitude><val>0.786</val></magnitude>
-      <node name="Sydowia">
-       <magnitude><val>0.786</val></magnitude>
-       <node name="Sydowia_polyspora">
-        <magnitude><val>0.786</val></magnitude>
+  <node name="Apusomonadidae">
+   <magnitude><val>0.6296</val></magnitude>
+   <node name="Apusomonadidae">
+    <magnitude><val>0.6296</val></magnitude>
+    <node name="Apusomonadidae">
+     <magnitude><val>0.6296</val></magnitude>
+     <node name="Apusomonadidae">
+      <magnitude><val>0.6296</val></magnitude>
+      <node name="Thecamonas">
+       <magnitude><val>0.6296</val></magnitude>
+       <node name="Thecamonas_trahens">
+        <magnitude><val>0.6296</val></magnitude>
        </node>
       </node>
      </node>
     </node>
    </node>
-   <node name="Eurotiomycetes">
-    <magnitude><val>1.942</val></magnitude>
-    <node name="Eurotiales">
-     <magnitude><val>1.942</val></magnitude>
-    </node>
-   </node>
   </node>
-  <node name="Discosea">
-   <magnitude><val>5.3074</val></magnitude>
-   <node name="Longamoebia">
-    <magnitude><val>2.4506</val></magnitude>
-    <node name="Longamoebia">
-     <magnitude><val>2.4506</val></magnitude>
-    </node>
-   </node>
-   <node name="Flabellinia">
-    <magnitude><val>2.8568</val></magnitude>
-    <node name="Dactylopodida">
-     <magnitude><val>1.9079</val></magnitude>
-    </node>
-    <node name="Vannellidae">
-     <magnitude><val>0.9489</val></magnitude>
-     <node name="Vannellidae">
-      <magnitude><val>0.9489</val></magnitude>
-     </node>
-    </node>
+  <node name="Euglenozoa">
+   <magnitude><val>1.172</val></magnitude>
+   <node name="Euglenida">
+    <magnitude><val>1.172</val></magnitude>
    </node>
   </node>
   <node name="Rhodophyta">
-   <magnitude><val>2.4822</val></magnitude>
-   <magnitudeUnassigned><val>1.9418</val></magnitudeUnassigned>
+   <magnitude><val>2.9117</val></magnitude>
    <node name="Florideophyceae">
-    <magnitude><val>0.5404</val></magnitude>
+    <magnitude><val>2.9117</val></magnitude>
+    <node name="Corallinales">
+     <magnitude><val>2.9117</val></magnitude>
+    </node>
    </node>
   </node>
-  <node name="Porifera">
-   <magnitude><val>0.5707</val></magnitude>
-   <node name="Demospongiae">
-    <magnitude><val>0.5707</val></magnitude>
-    <node name="Haplosclerida">
-     <magnitude><val>0.5707</val></magnitude>
+  <node name="Chlorophyta">
+   <magnitude><val>0.5321</val></magnitude>
+  </node>
+  <node name="Arthropoda">
+   <magnitude><val>0.7311</val></magnitude>
+   <node name="Hexanauplia">
+    <magnitude><val>0.7311</val></magnitude>
+    <node name="Calanoida">
+     <magnitude><val>0.7311</val></magnitude>
     </node>
    </node>
   </node>
   <node name="Bigyra">
-   <magnitude><val>0.5843</val></magnitude>
+   <magnitude><val>3.9535</val></magnitude>
    <node name="Bigyra">
-    <magnitude><val>0.5843</val></magnitude>
+    <magnitude><val>3.9535</val></magnitude>
     <node name="Bicosoecida">
-     <magnitude><val>0.5843</val></magnitude>
+     <magnitude><val>3.9535</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Gastrotricha">
+   <magnitude><val>6.707</val></magnitude>
+   <node name="Chaetonotida">
+    <magnitude><val>6.707</val></magnitude>
+    <node name="Chaetonotida">
+     <magnitude><val>6.707</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Ascomycota">
+   <magnitudeUnassigned><val>0.7843</val></magnitudeUnassigned>
+   <magnitude><val>1.6244</val></magnitude>
+   <node name="Eurotiomycetes">
+    <magnitude><val>0.8401</val></magnitude>
+    <node name="Eurotiales">
+     <magnitude><val>0.8401</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Bacillariophyta">
+   <magnitude><val>4.9903</val></magnitude>
+   <magnitudeUnassigned><val>0.4571</val></magnitudeUnassigned>
+   <node name="Bacillariophyceae">
+    <magnitude><val>4.5332</val></magnitude>
+   </node>
+  </node>
+ </node>
+ <node name="Bacteria">
+  <magnitudeUnassigned><val>1.7142</val></magnitudeUnassigned>
+  <magnitude><val>17.3771</val></magnitude>
+  <node name="FCB_group">
+   <magnitude><val>7.0283</val></magnitude>
+   <node name="Bacteroidetes/Chlorobi_group">
+    <magnitude><val>7.0283</val></magnitude>
+    <node name="Bacteroidetes">
+     <magnitudeUnassigned><val>5.6242</val></magnitudeUnassigned>
+     <magnitude><val>7.0283</val></magnitude>
+     <node name="Flavobacteriia">
+      <magnitude><val>1.4041</val></magnitude>
+     </node>
+    </node>
+   </node>
+  </node>
+  <node name="Proteobacteria">
+   <magnitude><val>7.8614</val></magnitude>
+   <node name="Alphaproteobacteria">
+    <magnitudeUnassigned><val>1.5223</val></magnitudeUnassigned>
+    <magnitude><val>2.0223</val></magnitude>
+    <node name="Alphaproteobacteria">
+     <magnitude><val>0.5</val></magnitude>
+     <node name="incertae">
+      <magnitude><val>0.5</val></magnitude>
+      <node name="sedis">
+       <magnitude><val>0.5</val></magnitude>
+      </node>
+     </node>
+    </node>
+   </node>
+   <node name="Gammaproteobacteria">
+    <magnitudeUnassigned><val>1.8963</val></magnitudeUnassigned>
+    <magnitude><val>5.8391</val></magnitude>
+    <node name="Cellvibrionales">
+     <magnitude><val>3.9428</val></magnitude>
+     <node name="Microbulbiferaceae">
+      <magnitude><val>3.9428</val></magnitude>
+      <node name="Microbulbiferaceae">
+       <magnitude><val>3.9428</val></magnitude>
+       <node name="Microbulbifer">
+        <magnitude><val>3.9428</val></magnitude>
+       </node>
+      </node>
+     </node>
+    </node>
+   </node>
+  </node>
+  <node name="Terrabacteria_group">
+   <magnitude><val>0.7732</val></magnitude>
+   <node name="Firmicutes">
+    <magnitude><val>0.7732</val></magnitude>
+    <node name="Bacilli">
+     <magnitude><val>0.7732</val></magnitude>
+     <node name="Lactobacillales">
+      <magnitude><val>0.7732</val></magnitude>
+      <node name="Lactobacillaceae">
+       <magnitude><val>0.7732</val></magnitude>
+       <node name="Agrilactobacillus">
+        <magnitude><val>0.7732</val></magnitude>
+        <node name="Agrilactobacillus">
+         <magnitude><val>0.7732</val></magnitude>
+         <node name="composti">
+          <magnitude><val>0.7732</val></magnitude>
+          <node name="Agrilactobacillus">
+           <magnitude><val>0.7732</val></magnitude>
+           <node name="composti">
+            <magnitude><val>0.7732</val></magnitude>
+            <node name="DSM">
+             <magnitude><val>0.7732</val></magnitude>
+             <node name="18527">
+              <magnitude><val>0.7732</val></magnitude>
+              <node name="=">
+               <magnitude><val>0.7732</val></magnitude>
+               <node name="JCM">
+                <magnitude><val>0.7732</val></magnitude>
+                <node name="14202">
+                 <magnitude><val>0.7732</val></magnitude>
+                </node>
+               </node>
+              </node>
+             </node>
+            </node>
+           </node>
+          </node>
+         </node>
+        </node>
+       </node>
+      </node>
+     </node>
     </node>
    </node>
   </node>
