--- a/use_cases/marine/ARMS/ERR3460470/final_outcome/darn_sediment_clustered_d_10_pres_abs.krona_plot.html
+++ b/use_cases/marine/ARMS/ERR3460470/final_outcome/darn_sediment_clustered_d_10_pres_abs.krona_plot.html
@@ -6626,249 +6626,68 @@ function zoomOut()
     <dataset>darn_counts_sediment_clustered_d_10_krona</dataset>
    </datasets>
 <node name="all">
- <magnitude><val>186</val></magnitude>
+ <magnitude><val>107</val></magnitude>
+ <node name="DISTANT">
+  <magnitude><val>1</val></magnitude>
+ </node>
  <node name="Eukaryota">
-  <magnitudeUnassigned><val>64</val></magnitudeUnassigned>
-  <magnitude><val>137</val></magnitude>
-  <node name="Annelida">
-   <magnitude><val>2</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Polychaeta">
-    <magnitude><val>2</val></magnitude>
-    <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
-    <node name="Potamodrilidae">
-     <magnitude><val>1</val></magnitude>
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Potamodrilus">
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <magnitude><val>1</val></magnitude>
-      <node name="Potamodrilus">
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <magnitude><val>1</val></magnitude>
-       <node name="Potamodrilus_fluviatilis">
-        <magnitude><val>1</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Ascomycota">
-   <magnitudeUnassigned><val>4</val></magnitudeUnassigned>
-   <magnitude><val>8</val></magnitude>
-   <node name="Dothideomycetes">
-    <magnitude><val>1</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Dothideales">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>1</val></magnitude>
-     <node name="Dothioraceae">
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <magnitude><val>1</val></magnitude>
-      <node name="Sydowia">
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <magnitude><val>1</val></magnitude>
-       <node name="Sydowia_polyspora">
-        <magnitude><val>1</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-   <node name="Eurotiomycetes">
-    <magnitude><val>3</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Eurotiales">
-     <magnitude><val>3</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Rhodophyta">
+  <magnitudeUnassigned><val>30</val></magnitudeUnassigned>
+  <magnitude><val>81</val></magnitude>
+  <node name="Chlorophyta">
    <magnitude><val>3</val></magnitude>
-   <magnitudeUnassigned><val>2</val></magnitudeUnassigned>
-   <node name="Florideophyceae">
-    <magnitude><val>1</val></magnitude>
-   </node>
-  </node>
-  <node name="Bigyra">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>1</val></magnitude>
-   <node name="Bigyra">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>1</val></magnitude>
-    <node name="Bicosoecida">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Haptista">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>1</val></magnitude>
-   <node name="Haptophyta">
-    <magnitude><val>1</val></magnitude>
-   </node>
-  </node>
-  <node name="Cnidaria">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>9</val></magnitude>
-   <node name="Hydrozoa">
-    <magnitude><val>2</val></magnitude>
-   </node>
-   <node name="Myxozoa">
-    <magnitudeUnassigned><val>3</val></magnitudeUnassigned>
-    <magnitude><val>7</val></magnitude>
-    <node name="Malacovalvulida">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>3</val></magnitude>
-     <node name="Saccosporidae">
-      <magnitude><val>3</val></magnitude>
-     </node>
-    </node>
-    <node name="Multivalvulida">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>1</val></magnitude>
-     <node name="Kudoidae">
-      <magnitude><val>1</val></magnitude>
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Kudoa">
-       <magnitude><val>1</val></magnitude>
-      </node>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Nematoda">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>2</val></magnitude>
-   <node name="Chromadorea">
-    <magnitude><val>1</val></magnitude>
-   </node>
-   <node name="Enoplea">
-    <magnitude><val>1</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Dorylaimida">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Gastrotricha">
-   <magnitude><val>5</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Chaetonotida">
-    <magnitude><val>5</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Chaetonotida">
-     <magnitude><val>5</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Oomycota">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>2</val></magnitude>
-   <node name="Oomycota">
-    <magnitude><val>2</val></magnitude>
-   </node>
   </node>
   <node name="Xanthophyceae">
-   <magnitude><val>3</val></magnitude>
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>5</val></magnitude>
    <node name="Xanthophyceae">
-    <magnitude><val>3</val></magnitude>
-    <magnitudeUnassigned><val>2</val></magnitudeUnassigned>
-    <node name="Vaucheriales">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>1</val></magnitude>
-     <node name="Vaucheriaceae">
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <magnitude><val>1</val></magnitude>
-      <node name="Vaucheria">
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <magnitude><val>1</val></magnitude>
-       <node name="Vaucheria_sessilis">
-        <magnitude><val>1</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
+    <magnitude><val>5</val></magnitude>
    </node>
   </node>
   <node name="Arthropoda">
-   <magnitude><val>3</val></magnitude>
-   <magnitudeUnassigned><val>2</val></magnitudeUnassigned>
+   <magnitude><val>1</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
    <node name="Hexanauplia">
-    <magnitude><val>1</val></magnitude>
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>1</val></magnitude>
     <node name="Calanoida">
      <magnitude><val>1</val></magnitude>
     </node>
    </node>
   </node>
-  <node name="Phaeophyceae">
-   <magnitude><val>1</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Phaeophyceae">
+  <node name="Ascomycota">
+   <magnitude><val>2</val></magnitude>
+   <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
+   <node name="Eurotiomycetes">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
     <magnitude><val>1</val></magnitude>
-   </node>
-  </node>
-  <node name="Discosea">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>9</val></magnitude>
-   <node name="Flabellinia">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>5</val></magnitude>
-    <node name="Vannellidae">
-     <magnitude><val>2</val></magnitude>
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Vannellidae">
-      <magnitude><val>2</val></magnitude>
-     </node>
-    </node>
-    <node name="Dactylopodida">
-     <magnitude><val>3</val></magnitude>
-    </node>
-   </node>
-   <node name="Longamoebia">
-    <magnitude><val>4</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Longamoebia">
-     <magnitude><val>4</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Filasterea">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>6</val></magnitude>
-   <node name="Filasterea">
-    <magnitude><val>6</val></magnitude>
-   </node>
-  </node>
-  <node name="Chordata">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>3</val></magnitude>
-   <node name="Appendicularia">
-    <magnitude><val>1</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Copelata">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <node name="Eurotiales">
      <magnitude><val>1</val></magnitude>
-     <node name="Oikopleuridae">
-      <magnitude><val>1</val></magnitude>
-     </node>
     </node>
    </node>
-   <node name="Thaliacea">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+  </node>
+  <node name="Euglenozoa">
+   <magnitude><val>2</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Euglenida">
     <magnitude><val>2</val></magnitude>
-    <node name="Pyrosomata">
-     <magnitude><val>2</val></magnitude>
+   </node>
+  </node>
+  <node name="Apusomonadidae">
+   <magnitude><val>2</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Apusomonadidae">
+    <magnitude><val>2</val></magnitude>
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <node name="Apusomonadidae">
      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Pyrosomatidae">
+     <magnitude><val>2</val></magnitude>
+     <node name="Apusomonadidae">
       <magnitude><val>2</val></magnitude>
       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Pyrostremma">
+      <node name="Thecamonas">
        <magnitude><val>2</val></magnitude>
        <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <node name="Pyrostremma_spinosum">
+       <node name="Thecamonas_trahens">
         <magnitude><val>2</val></magnitude>
        </node>
       </node>
@@ -6876,106 +6695,177 @@ function zoomOut()
     </node>
    </node>
   </node>
-  <node name="Porifera">
-   <magnitude><val>1</val></magnitude>
+  <node name="Bigyra">
+   <magnitude><val>5</val></magnitude>
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Demospongiae">
+   <node name="Bigyra">
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>1</val></magnitude>
-    <node name="Haplosclerida">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Bacillariophyta">
-   <magnitude><val>13</val></magnitude>
-   <magnitudeUnassigned><val>6</val></magnitudeUnassigned>
-   <node name="Mediophyceae">
-    <magnitude><val>1</val></magnitude>
-   </node>
-   <node name="Bacillariophyceae">
-    <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
-    <magnitude><val>4</val></magnitude>
-    <node name="Bacillariales">
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>2</val></magnitude>
-     <node name="Bacillariaceae">
-      <magnitude><val>2</val></magnitude>
-     </node>
-    </node>
-    <node name="Naviculales">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-   <node name="Coscinodiscophyceae">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>2</val></magnitude>
-    <node name="Thalassiosirales">
-     <magnitude><val>2</val></magnitude>
+    <magnitude><val>5</val></magnitude>
+    <node name="Bicosoecida">
+     <magnitude><val>5</val></magnitude>
     </node>
    </node>
   </node>
   <node name="Mollusca">
-   <magnitude><val>1</val></magnitude>
+   <magnitude><val>4</val></magnitude>
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
    <node name="Bivalvia">
-    <magnitude><val>1</val></magnitude>
+    <magnitude><val>4</val></magnitude>
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <node name="Pterioida">
+     <magnitude><val>4</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Bacillariophyta">
+   <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
+   <magnitude><val>8</val></magnitude>
+   <node name="Bacillariophyceae">
+    <magnitude><val>7</val></magnitude>
+   </node>
+  </node>
+  <node name="Gastrotricha">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>11</val></magnitude>
+   <node name="Chaetonotida">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>11</val></magnitude>
+    <node name="Chaetonotida">
+     <magnitude><val>11</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Haptista">
+   <magnitude><val>4</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Haptophyta">
+    <magnitude><val>4</val></magnitude>
+   </node>
+  </node>
+  <node name="Rhodophyta">
+   <magnitude><val>4</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Florideophyceae">
+    <magnitude><val>4</val></magnitude>
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <node name="Corallinales">
+     <magnitude><val>4</val></magnitude>
+    </node>
    </node>
   </node>
  </node>
  <node name="Bacteria">
-  <magnitude><val>47</val></magnitude>
-  <magnitudeUnassigned><val>5</val></magnitudeUnassigned>
-  <node name="Bacteroidetes">
-   <magnitudeUnassigned><val>5</val></magnitudeUnassigned>
-   <magnitude><val>18</val></magnitude>
-   <node name="Flavobacteriia">
-    <magnitudeUnassigned><val>11</val></magnitudeUnassigned>
-    <magnitude><val>13</val></magnitude>
-    <node name="Flavobacteriales">
-     <magnitude><val>2</val></magnitude>
+  <magnitudeUnassigned><val>3</val></magnitudeUnassigned>
+  <magnitude><val>25</val></magnitude>
+  <node name="FCB_group">
+   <magnitude><val>8</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Bacteroidetes/Chlorobi_group">
+    <magnitude><val>8</val></magnitude>
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <node name="Bacteroidetes">
+     <magnitudeUnassigned><val>6</val></magnitudeUnassigned>
+     <magnitude><val>8</val></magnitude>
+     <node name="Flavobacteriia">
+      <magnitude><val>2</val></magnitude>
+     </node>
     </node>
    </node>
   </node>
   <node name="Proteobacteria">
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>24</val></magnitude>
-   <node name="Alphaproteobacteria">
-    <magnitude><val>17</val></magnitude>
-    <magnitudeUnassigned><val>14</val></magnitudeUnassigned>
-    <node name="Sphingomonadales">
-     <magnitude><val>1</val></magnitude>
-    </node>
-    <node name="Rickettsiales">
-     <magnitude><val>1</val></magnitude>
-    </node>
-    <node name="Alphaproteobacteria_incertae_sedis">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
+   <magnitude><val>12</val></magnitude>
    <node name="Gammaproteobacteria">
-    <magnitude><val>6</val></magnitude>
+    <magnitude><val>7</val></magnitude>
+    <magnitudeUnassigned><val>3</val></magnitudeUnassigned>
+    <node name="Cellvibrionales">
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <magnitude><val>4</val></magnitude>
+     <node name="Microbulbiferaceae">
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <magnitude><val>4</val></magnitude>
+      <node name="Microbulbiferaceae">
+       <magnitude><val>4</val></magnitude>
+       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+       <node name="Microbulbifer">
+        <magnitude><val>4</val></magnitude>
+       </node>
+      </node>
+     </node>
+    </node>
    </node>
-   <node name="Betaproteobacteria">
-    <magnitude><val>1</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Nitrosomonadales">
+   <node name="Alphaproteobacteria">
+    <magnitude><val>5</val></magnitude>
+    <magnitudeUnassigned><val>4</val></magnitudeUnassigned>
+    <node name="Alphaproteobacteria">
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
      <magnitude><val>1</val></magnitude>
+     <node name="incertae">
+      <magnitude><val>1</val></magnitude>
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <node name="sedis">
+       <magnitude><val>1</val></magnitude>
+      </node>
+     </node>
     </node>
    </node>
   </node>
- </node>
- <node name="Archaea">
-  <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-  <magnitude><val>2</val></magnitude>
-  <node name="Euryarchaeota">
+  <node name="Terrabacteria_group">
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
    <magnitude><val>2</val></magnitude>
-   <node name="environmental_samples">
+   <node name="Firmicutes">
     <magnitude><val>2</val></magnitude>
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="uncultured_marine_group_II/III">
+    <node name="Bacilli">
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
      <magnitude><val>2</val></magnitude>
+     <node name="Lactobacillales">
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <magnitude><val>2</val></magnitude>
+      <node name="Lactobacillaceae">
+       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+       <magnitude><val>2</val></magnitude>
+       <node name="Agrilactobacillus">
+        <magnitude><val>2</val></magnitude>
+        <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+        <node name="Agrilactobacillus">
+         <magnitude><val>2</val></magnitude>
+         <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+         <node name="composti">
+          <magnitude><val>2</val></magnitude>
+          <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+          <node name="Agrilactobacillus">
+           <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+           <magnitude><val>2</val></magnitude>
+           <node name="composti">
+            <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+            <magnitude><val>2</val></magnitude>
+            <node name="DSM">
+             <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+             <magnitude><val>2</val></magnitude>
+             <node name="18527">
+              <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+              <magnitude><val>2</val></magnitude>
+              <node name="=">
+               <magnitude><val>2</val></magnitude>
+               <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+               <node name="JCM">
+                <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+                <magnitude><val>2</val></magnitude>
+                <node name="14202">
+                 <magnitude><val>2</val></magnitude>
+                </node>
+               </node>
+              </node>
+             </node>
+            </node>
+           </node>
+          </node>
+         </node>
+        </node>
+       </node>
+      </node>
+     </node>
     </node>
    </node>
   </node>
