--- a/use_cases/marine/ARMS/ERR3460467/final_outcome/darn_arms_EtOH_clustered_d_10_likelihood.krona_plot.html
+++ b/use_cases/marine/ARMS/ERR3460467/final_outcome/darn_arms_EtOH_clustered_d_10_likelihood.krona_plot.html
@@ -6626,67 +6626,157 @@ function zoomOut()
     <dataset>darn_likelihood_arms_EtOH_clustered_d_10_krona</dataset>
    </datasets>
 <node name="all">
- <magnitude><val>46.0673</val></magnitude>
- <node name="Bacteria">
-  <magnitude><val>3.1794</val></magnitude>
-  <node name="Proteobacteria">
-   <magnitude><val>3.1794</val></magnitude>
-   <node name="Alphaproteobacteria">
-    <magnitude><val>3.1794</val></magnitude>
-   </node>
-  </node>
+ <magnitude><val>42.86213</val></magnitude>
+ <node name="DISTANT">
+  <magnitude><val>0.2436</val></magnitude>
  </node>
  <node name="Eukaryota">
-  <magnitude><val>40.2288</val></magnitude>
-  <magnitudeUnassigned><val>13.0198</val></magnitudeUnassigned>
+  <magnitudeUnassigned><val>10.392</val></magnitudeUnassigned>
+  <magnitude><val>34.39634</val></magnitude>
   <node name="Bacillariophyta">
-   <magnitude><val>1.9164</val></magnitude>
-   <node name="Bacillariophyceae">
-    <magnitude><val>0.573</val></magnitude>
-    <node name="Bacillariales">
-     <magnitude><val>0.573</val></magnitude>
-     <node name="Bacillariaceae">
-      <magnitude><val>0.573</val></magnitude>
-     </node>
-    </node>
-   </node>
+   <magnitude><val>1.986</val></magnitude>
    <node name="Coscinodiscophyceae">
-    <magnitude><val>1.3434</val></magnitude>
+    <magnitude><val>1.4725</val></magnitude>
     <node name="Thalassiosirales">
-     <magnitude><val>1.3434</val></magnitude>
+     <magnitude><val>1.4725</val></magnitude>
     </node>
    </node>
-  </node>
-  <node name="Rhodophyta">
-   <magnitude><val>0.6999</val></magnitude>
-   <node name="Florideophyceae">
-    <magnitude><val>0.6999</val></magnitude>
-    <node name="Corallinales">
-     <magnitude><val>0.6999</val></magnitude>
+   <node name="Bacillariophyceae">
+    <magnitude><val>0.5135</val></magnitude>
+    <node name="Bacillariales">
+     <magnitude><val>0.5135</val></magnitude>
+     <node name="Bacillariaceae">
+      <magnitude><val>0.5135</val></magnitude>
+     </node>
     </node>
    </node>
   </node>
   <node name="Haptista">
-   <magnitude><val>0.4999</val></magnitude>
+   <magnitude><val>0.7819</val></magnitude>
    <node name="Haptophyta">
-    <magnitude><val>0.4999</val></magnitude>
-    <node name="Isochrysidales">
-     <magnitude><val>0.4999</val></magnitude>
-    </node>
+    <magnitude><val>0.7819</val></magnitude>
    </node>
   </node>
   <node name="Ascomycota">
-   <magnitude><val>0.8103</val></magnitude>
-   <node name="Eurotiomycetes">
-    <magnitude><val>0.8103</val></magnitude>
+   <magnitude><val>0.8211</val></magnitude>
+  </node>
+  <node name="Basidiomycota">
+   <magnitude><val>0.5777</val></magnitude>
+   <node name="Cystobasidiomycetes">
+    <magnitude><val>0.5777</val></magnitude>
+    <node name="Cystobasidiales">
+     <magnitude><val>0.5777</val></magnitude>
+     <node name="Cystobasidiaceae">
+      <magnitude><val>0.5777</val></magnitude>
+      <node name="Cystobasidium">
+       <magnitude><val>0.5777</val></magnitude>
+       <node name="Cystobasidium_sp">
+        <magnitude><val>0.5777</val></magnitude>
+       </node>
+      </node>
+     </node>
+    </node>
+   </node>
+  </node>
+  <node name="Chordata">
+   <magnitude><val>2.4163</val></magnitude>
+   <magnitudeUnassigned><val>0.5269</val></magnitudeUnassigned>
+   <node name="Appendicularia">
+    <magnitude><val>0.4563</val></magnitude>
+    <node name="Copelata">
+     <magnitude><val>0.4563</val></magnitude>
+     <node name="Oikopleuridae">
+      <magnitude><val>0.4563</val></magnitude>
+     </node>
+    </node>
+   </node>
+   <node name="Ascidiacea">
+    <magnitude><val>1.4331</val></magnitude>
+    <node name="Stolidobranchia">
+     <magnitude><val>1.4331</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Euglenozoa">
+   <magnitude><val>1.4859</val></magnitude>
+   <node name="Euglenida">
+    <magnitude><val>1.4859</val></magnitude>
+   </node>
+  </node>
+  <node name="Cnidaria">
+   <magnitude><val>5.4265</val></magnitude>
+   <node name="Hydrozoa">
+    <magnitude><val>4.4033</val></magnitude>
+   </node>
+   <node name="Myxozoa">
+    <magnitude><val>1.0232</val></magnitude>
+   </node>
+  </node>
+  <node name="Arthropoda">
+   <magnitude><val>2.0518</val></magnitude>
+   <node name="Hexanauplia">
+    <magnitude><val>1.6687</val></magnitude>
+    <magnitudeUnassigned><val>1.1259</val></magnitudeUnassigned>
+    <node name="Sessilia">
+     <magnitude><val>0.5428</val></magnitude>
+    </node>
+   </node>
+   <node name="Diplopoda">
+    <magnitude><val>0.3831</val></magnitude>
+   </node>
+  </node>
+  <node name="Annelida">
+   <magnitude><val>0.8568</val></magnitude>
+   <node name="Polychaeta">
+    <magnitude><val>0.8568</val></magnitude>
    </node>
   </node>
   <node name="Bryozoa">
-   <magnitude><val>2.2021</val></magnitude>
+   <magnitude><val>2.3552</val></magnitude>
    <node name="Gymnolaemata">
-    <magnitude><val>2.2021</val></magnitude>
+    <magnitude><val>2.3552</val></magnitude>
     <node name="Cheilostomatida">
-     <magnitude><val>2.2021</val></magnitude>
+     <magnitude><val>2.3552</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Mollusca">
+   <magnitude><val>2.5102</val></magnitude>
+   <node name="Bivalvia">
+    <magnitude><val>2.5102</val></magnitude>
+    <node name="Ostreoida">
+     <magnitude><val>1.827</val></magnitude>
+    </node>
+    <node name="Pterioida">
+     <magnitude><val>0.6832</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Porifera">
+   <magnitude><val>1.4019</val></magnitude>
+   <node name="Demospongiae">
+    <magnitude><val>1.4019</val></magnitude>
+    <magnitudeUnassigned><val>0.491</val></magnitudeUnassigned>
+    <node name="Suberitida">
+     <magnitude><val>0.9109</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Evosea">
+   <magnitude><val>0.06364</val></magnitude>
+   <node name="Eumycetozoa">
+    <magnitude><val>0.06364</val></magnitude>
+    <node name="Physariida">
+     <magnitude><val>0.06364</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Rhodophyta">
+   <magnitude><val>0.7694</val></magnitude>
+   <node name="Florideophyceae">
+    <magnitude><val>0.7694</val></magnitude>
+    <node name="Corallinales">
+     <magnitude><val>0.7694</val></magnitude>
     </node>
    </node>
   </node>
@@ -6705,146 +6795,90 @@ function zoomOut()
     </node>
    </node>
   </node>
-  <node name="Basidiomycota">
-   <magnitude><val>0.5621</val></magnitude>
-   <node name="Cystobasidiomycetes">
-    <magnitude><val>0.5621</val></magnitude>
-    <node name="Cystobasidiales">
-     <magnitude><val>0.5621</val></magnitude>
-     <node name="Cystobasidiaceae">
-      <magnitude><val>0.5621</val></magnitude>
-      <node name="Cystobasidium">
-       <magnitude><val>0.5621</val></magnitude>
-       <node name="Cystobasidium_sp">
-        <magnitude><val>0.5621</val></magnitude>
+ </node>
+ <node name="Bacteria">
+  <magnitude><val>8.22219</val></magnitude>
+  <magnitudeUnassigned><val>1.3113</val></magnitudeUnassigned>
+  <node name="Proteobacteria">
+   <magnitude><val>4.04319</val></magnitude>
+   <magnitudeUnassigned><val>0.07399</val></magnitudeUnassigned>
+   <node name="Alphaproteobacteria">
+    <magnitudeUnassigned><val>1.6457</val></magnitudeUnassigned>
+    <magnitude><val>3.1665</val></magnitude>
+    <node name="Holosporales">
+     <magnitude><val>0.9515</val></magnitude>
+     <node name="Caedimonadaceae">
+      <magnitude><val>0.9515</val></magnitude>
+      <node name="Caedimonadaceae">
+       <magnitude><val>0.9515</val></magnitude>
+      </node>
+     </node>
+    </node>
+    <node name="Alphaproteobacteria">
+     <magnitude><val>0.5693</val></magnitude>
+     <node name="incertae">
+      <magnitude><val>0.5693</val></magnitude>
+      <node name="sedis">
+       <magnitude><val>0.5693</val></magnitude>
+      </node>
+     </node>
+    </node>
+   </node>
+   <node name="Gammaproteobacteria">
+    <magnitude><val>0.8027</val></magnitude>
+   </node>
+  </node>
+  <node name="Terrabacteria_group">
+   <magnitude><val>2.8677</val></magnitude>
+   <node name="Firmicutes">
+    <magnitude><val>2.8677</val></magnitude>
+    <node name="Bacilli">
+     <magnitude><val>2.8677</val></magnitude>
+     <node name="Bacillales">
+      <magnitude><val>0.5761</val></magnitude>
+      <node name="Listeriaceae">
+       <magnitude><val>0.5761</val></magnitude>
+      </node>
+     </node>
+     <node name="Lactobacillales">
+      <magnitude><val>2.2916</val></magnitude>
+      <node name="Lactobacillaceae">
+       <magnitude><val>2.2916</val></magnitude>
+       <node name="Agrilactobacillus">
+        <magnitude><val>2.2916</val></magnitude>
+        <node name="Agrilactobacillus">
+         <magnitude><val>2.2916</val></magnitude>
+         <node name="composti">
+          <magnitude><val>2.2916</val></magnitude>
+          <node name="Agrilactobacillus">
+           <magnitude><val>2.2916</val></magnitude>
+           <node name="composti">
+            <magnitude><val>2.2916</val></magnitude>
+            <node name="DSM">
+             <magnitude><val>2.2916</val></magnitude>
+             <node name="18527">
+              <magnitude><val>2.2916</val></magnitude>
+              <node name="=">
+               <magnitude><val>2.2916</val></magnitude>
+               <node name="JCM">
+                <magnitude><val>2.2916</val></magnitude>
+                <node name="14202">
+                 <magnitude><val>2.2916</val></magnitude>
+                </node>
+               </node>
+              </node>
+             </node>
+            </node>
+           </node>
+          </node>
+         </node>
+        </node>
        </node>
       </node>
      </node>
     </node>
    </node>
   </node>
-  <node name="Mollusca">
-   <magnitude><val>2.9241</val></magnitude>
-   <magnitudeUnassigned><val>0.6047</val></magnitudeUnassigned>
-   <node name="Bivalvia">
-    <magnitudeUnassigned><val>0.6004</val></magnitudeUnassigned>
-    <magnitude><val>2.3194</val></magnitude>
-    <node name="Ostreoida">
-     <magnitude><val>1.719</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Evosea">
-   <magnitude><val>0.8291</val></magnitude>
-   <node name="Eumycetozoa">
-    <magnitude><val>0.8291</val></magnitude>
-   </node>
-  </node>
-  <node name="Arthropoda">
-   <magnitude><val>3.2199</val></magnitude>
-   <magnitudeUnassigned><val>0.767</val></magnitudeUnassigned>
-   <node name="Arachnida">
-    <magnitude><val>0.6108</val></magnitude>
-   </node>
-   <node name="Hexanauplia">
-    <magnitudeUnassigned><val>0.6961</val></magnitudeUnassigned>
-    <magnitude><val>1.8421</val></magnitude>
-    <node name="Calanoida">
-     <magnitude><val>0.5185</val></magnitude>
-    </node>
-    <node name="Sessilia">
-     <magnitude><val>0.6275</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Annelida">
-   <magnitude><val>1.1049</val></magnitude>
-   <node name="Polychaeta">
-    <magnitude><val>1.1049</val></magnitude>
-   </node>
-  </node>
-  <node name="Chordata">
-   <magnitude><val>2.132</val></magnitude>
-   <node name="Thaliacea">
-    <magnitude><val>0.6457</val></magnitude>
-    <node name="Doliolida">
-     <magnitude><val>0.6457</val></magnitude>
-     <node name="Doliolidae">
-      <magnitude><val>0.6457</val></magnitude>
-      <node name="Doliolum">
-       <magnitude><val>0.6457</val></magnitude>
-       <node name="Doliolum_nationalis">
-        <magnitude><val>0.6457</val></magnitude>
-       </node>
-      </node>
-     </node>
-    </node>
-   </node>
-   <node name="Ascidiacea">
-    <magnitude><val>1.4863</val></magnitude>
-    <node name="Stolidobranchia">
-     <magnitude><val>1.4863</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Cnidaria">
-   <magnitude><val>7.4024</val></magnitude>
-   <node name="Myxozoa">
-    <magnitudeUnassigned><val>1.3918</val></magnitudeUnassigned>
-    <magnitude><val>2.2657</val></magnitude>
-    <node name="Multivalvulida">
-     <magnitude><val>0.8739</val></magnitude>
-     <node name="Kudoidae">
-      <magnitude><val>0.8739</val></magnitude>
-      <node name="Kudoa">
-       <magnitude><val>0.8739</val></magnitude>
-      </node>
-     </node>
-    </node>
-   </node>
-   <node name="Hydrozoa">
-    <magnitude><val>4.4001</val></magnitude>
-   </node>
-   <node name="Scyphozoa">
-    <magnitude><val>0.7366</val></magnitude>
-   </node>
-  </node>
-  <node name="Porifera">
-   <magnitude><val>0.927</val></magnitude>
-   <node name="Demospongiae">
-    <magnitude><val>0.927</val></magnitude>
-    <node name="Suberitida">
-     <magnitude><val>0.927</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Chlorophyta">
-   <magnitude><val>0.6772</val></magnitude>
-  </node>
-  <node name="Nematoda">
-   <magnitude><val>0.8017</val></magnitude>
-   <node name="Enoplea">
-    <magnitude><val>0.8017</val></magnitude>
-    <node name="Dorylaimida">
-     <magnitude><val>0.8017</val></magnitude>
-    </node>
-   </node>
-  </node>
- </node>
- <node name="Archaea">
-  <magnitude><val>1.3482</val></magnitude>
-  <node name="Euryarchaeota">
-   <magnitude><val>1.3482</val></magnitude>
-   <node name="environmental_samples">
-    <magnitude><val>1.3482</val></magnitude>
-    <node name="uncultured_marine_group_II/III">
-     <magnitude><val>1.3482</val></magnitude>
-    </node>
-   </node>
-  </node>
- </node>
- <node name="DISTANT">
-  <magnitude><val>1.3109</val></magnitude>
  </node>
 </node>
   </krona>
