--- a/use_cases/marine/ARMS/ERR3460467/final_outcome/darn_arms_EtOH_clustered_d_10_pres_abs.krona_plot.html
+++ b/use_cases/marine/ARMS/ERR3460467/final_outcome/darn_arms_EtOH_clustered_d_10_pres_abs.krona_plot.html
@@ -6627,79 +6627,196 @@ function zoomOut()
    </datasets>
 <node name="all">
  <magnitude><val>64</val></magnitude>
- <node name="Eukaryota">
-  <magnitudeUnassigned><val>15</val></magnitudeUnassigned>
-  <magnitude><val>55</val></magnitude>
-  <node name="Cnidaria">
-   <magnitude><val>11</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Scyphozoa">
+ <node name="DISTANT">
+  <magnitude><val>1</val></magnitude>
+ </node>
+ <node name="Bacteria">
+  <magnitude><val>12</val></magnitude>
+  <magnitudeUnassigned><val>2</val></magnitudeUnassigned>
+  <node name="Proteobacteria">
+   <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
+   <magnitude><val>6</val></magnitude>
+   <node name="Gammaproteobacteria">
     <magnitude><val>1</val></magnitude>
    </node>
-   <node name="Hydrozoa">
-    <magnitude><val>6</val></magnitude>
-   </node>
-   <node name="Myxozoa">
+   <node name="Alphaproteobacteria">
     <magnitudeUnassigned><val>2</val></magnitudeUnassigned>
     <magnitude><val>4</val></magnitude>
-    <node name="Multivalvulida">
+    <node name="Holosporales">
      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <magnitude><val>2</val></magnitude>
-     <node name="Kudoidae">
-      <magnitude><val>2</val></magnitude>
+     <magnitude><val>1</val></magnitude>
+     <node name="Caedimonadaceae">
       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Kudoa">
-       <magnitude><val>2</val></magnitude>
+      <magnitude><val>1</val></magnitude>
+      <node name="Caedimonadaceae">
+       <magnitude><val>1</val></magnitude>
+      </node>
+     </node>
+    </node>
+    <node name="Alphaproteobacteria">
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <magnitude><val>1</val></magnitude>
+     <node name="incertae">
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <magnitude><val>1</val></magnitude>
+      <node name="sedis">
+       <magnitude><val>1</val></magnitude>
       </node>
      </node>
     </node>
    </node>
   </node>
-  <node name="Evosea">
+  <node name="Terrabacteria_group">
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>4</val></magnitude>
+   <node name="Firmicutes">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>4</val></magnitude>
+    <node name="Bacilli">
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <magnitude><val>4</val></magnitude>
+     <node name="Lactobacillales">
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <magnitude><val>3</val></magnitude>
+      <node name="Lactobacillaceae">
+       <magnitude><val>3</val></magnitude>
+       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+       <node name="Agrilactobacillus">
+        <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+        <magnitude><val>3</val></magnitude>
+        <node name="Agrilactobacillus">
+         <magnitude><val>3</val></magnitude>
+         <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+         <node name="composti">
+          <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+          <magnitude><val>3</val></magnitude>
+          <node name="Agrilactobacillus">
+           <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+           <magnitude><val>3</val></magnitude>
+           <node name="composti">
+            <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+            <magnitude><val>3</val></magnitude>
+            <node name="DSM">
+             <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+             <magnitude><val>3</val></magnitude>
+             <node name="18527">
+              <magnitude><val>3</val></magnitude>
+              <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+              <node name="=">
+               <magnitude><val>3</val></magnitude>
+               <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+               <node name="JCM">
+                <magnitude><val>3</val></magnitude>
+                <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+                <node name="14202">
+                 <magnitude><val>3</val></magnitude>
+                </node>
+               </node>
+              </node>
+             </node>
+            </node>
+           </node>
+          </node>
+         </node>
+        </node>
+       </node>
+      </node>
+     </node>
+     <node name="Bacillales">
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <magnitude><val>1</val></magnitude>
+      <node name="Listeriaceae">
+       <magnitude><val>1</val></magnitude>
+      </node>
+     </node>
+    </node>
+   </node>
+  </node>
+ </node>
+ <node name="Eukaryota">
+  <magnitudeUnassigned><val>15</val></magnitudeUnassigned>
+  <magnitude><val>51</val></magnitude>
+  <node name="Mollusca">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>3</val></magnitude>
+   <node name="Bivalvia">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>3</val></magnitude>
+    <node name="Pterioida">
+     <magnitude><val>1</val></magnitude>
+    </node>
+    <node name="Ostreoida">
+     <magnitude><val>2</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Bacillariophyta">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>3</val></magnitude>
+   <node name="Coscinodiscophyceae">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>2</val></magnitude>
+    <node name="Thalassiosirales">
+     <magnitude><val>2</val></magnitude>
+    </node>
+   </node>
+   <node name="Bacillariophyceae">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>1</val></magnitude>
+    <node name="Bacillariales">
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <magnitude><val>1</val></magnitude>
+     <node name="Bacillariaceae">
+      <magnitude><val>1</val></magnitude>
+     </node>
+    </node>
+   </node>
+  </node>
+  <node name="Annelida">
    <magnitude><val>1</val></magnitude>
-   <node name="Eumycetozoa">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Polychaeta">
     <magnitude><val>1</val></magnitude>
    </node>
   </node>
-  <node name="Porifera">
+  <node name="Cnidaria">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>8</val></magnitude>
+   <node name="Myxozoa">
+    <magnitude><val>2</val></magnitude>
+   </node>
+   <node name="Hydrozoa">
+    <magnitude><val>6</val></magnitude>
+   </node>
+  </node>
+  <node name="Ascomycota">
    <magnitude><val>1</val></magnitude>
+  </node>
+  <node name="Porifera">
+   <magnitude><val>2</val></magnitude>
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
    <node name="Demospongiae">
-    <magnitude><val>1</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
+    <magnitude><val>2</val></magnitude>
     <node name="Suberitida">
      <magnitude><val>1</val></magnitude>
     </node>
    </node>
   </node>
-  <node name="Ascomycota">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>1</val></magnitude>
-   <node name="Eurotiomycetes">
-    <magnitude><val>1</val></magnitude>
-   </node>
-  </node>
-  <node name="Arthropoda">
-   <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
-   <magnitude><val>5</val></magnitude>
-   <node name="Arachnida">
-    <magnitude><val>1</val></magnitude>
-   </node>
-   <node name="Hexanauplia">
-    <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
-    <magnitude><val>3</val></magnitude>
-    <node name="Calanoida">
-     <magnitude><val>1</val></magnitude>
-    </node>
-    <node name="Sessilia">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-  </node>
   <node name="Chordata">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>3</val></magnitude>
+   <magnitude><val>4</val></magnitude>
+   <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
+   <node name="Appendicularia">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>1</val></magnitude>
+    <node name="Copelata">
+     <magnitude><val>1</val></magnitude>
+     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <node name="Oikopleuridae">
+      <magnitude><val>1</val></magnitude>
+     </node>
+    </node>
+   </node>
    <node name="Ascidiacea">
     <magnitude><val>2</val></magnitude>
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
@@ -6707,49 +6824,41 @@ function zoomOut()
      <magnitude><val>2</val></magnitude>
     </node>
    </node>
-   <node name="Thaliacea">
+  </node>
+  <node name="Evosea">
+   <magnitude><val>1</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Eumycetozoa">
     <magnitude><val>1</val></magnitude>
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Doliolida">
+    <node name="Physariida">
      <magnitude><val>1</val></magnitude>
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Doliolidae">
-      <magnitude><val>1</val></magnitude>
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Doliolum">
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-       <magnitude><val>1</val></magnitude>
-       <node name="Doliolum_nationalis">
-        <magnitude><val>1</val></magnitude>
-       </node>
-      </node>
-     </node>
     </node>
    </node>
   </node>
-  <node name="Mollusca">
-   <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
-   <magnitude><val>4</val></magnitude>
-   <node name="Bivalvia">
+  <node name="Bryozoa">
+   <magnitude><val>3</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Gymnolaemata">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
     <magnitude><val>3</val></magnitude>
-    <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
-    <node name="Ostreoida">
-     <magnitude><val>2</val></magnitude>
+    <node name="Cheilostomatida">
+     <magnitude><val>3</val></magnitude>
     </node>
    </node>
   </node>
   <node name="Chytridiomycota">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
    <magnitude><val>1</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
    <node name="Chytridiomycetes">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
     <magnitude><val>1</val></magnitude>
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
     <node name="Synchytriales">
      <magnitude><val>1</val></magnitude>
      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
      <node name="Synchytriaceae">
-      <magnitude><val>1</val></magnitude>
       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <magnitude><val>1</val></magnitude>
       <node name="Synchytrium">
        <magnitude><val>1</val></magnitude>
       </node>
@@ -6757,31 +6866,9 @@ function zoomOut()
     </node>
    </node>
   </node>
-  <node name="Rhodophyta">
-   <magnitude><val>1</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Florideophyceae">
-    <magnitude><val>1</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Corallinales">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Nematoda">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>1</val></magnitude>
-   <node name="Enoplea">
-    <magnitude><val>1</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Dorylaimida">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-  </node>
   <node name="Basidiomycota">
-   <magnitude><val>1</val></magnitude>
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>1</val></magnitude>
    <node name="Cystobasidiomycetes">
     <magnitude><val>1</val></magnitude>
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
@@ -6789,8 +6876,8 @@ function zoomOut()
      <magnitude><val>1</val></magnitude>
      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
      <node name="Cystobasidiaceae">
-      <magnitude><val>1</val></magnitude>
       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <magnitude><val>1</val></magnitude>
       <node name="Cystobasidium">
        <magnitude><val>1</val></magnitude>
        <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
@@ -6802,87 +6889,43 @@ function zoomOut()
     </node>
    </node>
   </node>
+  <node name="Rhodophyta">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>1</val></magnitude>
+   <node name="Florideophyceae">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>1</val></magnitude>
+    <node name="Corallinales">
+     <magnitude><val>1</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Arthropoda">
+   <magnitude><val>4</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Diplopoda">
+    <magnitude><val>1</val></magnitude>
+   </node>
+   <node name="Hexanauplia">
+    <magnitudeUnassigned><val>2</val></magnitudeUnassigned>
+    <magnitude><val>3</val></magnitude>
+    <node name="Sessilia">
+     <magnitude><val>1</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Euglenozoa">
+   <magnitude><val>2</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Euglenida">
+    <magnitude><val>2</val></magnitude>
+   </node>
+  </node>
   <node name="Haptista">
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
    <magnitude><val>1</val></magnitude>
    <node name="Haptophyta">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
     <magnitude><val>1</val></magnitude>
-    <node name="Isochrysidales">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Annelida">
-   <magnitude><val>2</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Polychaeta">
-    <magnitude><val>2</val></magnitude>
-   </node>
-  </node>
-  <node name="Bacillariophyta">
-   <magnitude><val>3</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Coscinodiscophyceae">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>2</val></magnitude>
-    <node name="Thalassiosirales">
-     <magnitude><val>2</val></magnitude>
-    </node>
-   </node>
-   <node name="Bacillariophyceae">
-    <magnitude><val>1</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Bacillariales">
-     <magnitude><val>1</val></magnitude>
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Bacillariaceae">
-      <magnitude><val>1</val></magnitude>
-     </node>
-    </node>
-   </node>
-  </node>
-  <node name="Bryozoa">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>3</val></magnitude>
-   <node name="Gymnolaemata">
-    <magnitude><val>3</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Cheilostomatida">
-     <magnitude><val>3</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Chlorophyta">
-   <magnitude><val>1</val></magnitude>
-  </node>
- </node>
- <node name="Archaea">
-  <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-  <magnitude><val>2</val></magnitude>
-  <node name="Euryarchaeota">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>2</val></magnitude>
-   <node name="environmental_samples">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>2</val></magnitude>
-    <node name="uncultured_marine_group_II/III">
-     <magnitude><val>2</val></magnitude>
-    </node>
-   </node>
-  </node>
- </node>
- <node name="DISTANT">
-  <magnitude><val>3</val></magnitude>
- </node>
- <node name="Bacteria">
-  <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-  <magnitude><val>4</val></magnitude>
-  <node name="Proteobacteria">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>4</val></magnitude>
-   <node name="Alphaproteobacteria">
-    <magnitude><val>4</val></magnitude>
    </node>
   </node>
  </node>
